# RAG-GraphRAG-Knowledge-Engine

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  decomposer.py  grader.py  memory.py  orchestrator.py  router.py  schemas.py
api/: main.py  middleware.py  schemas.py
config/: settings.py
ecosystem/: gateway.py
ingestion/: __init__.py  chunker.py  parser.py  pipeline.py
llm/: __init__.py  client.py  prompts.py
observability/: __init__.py  logger.py  tracer.py
rag/: generator.py  graph_retriever.py  hybrid_retriever.py  retriever.py  vector_store.py
retrieval/: __init__.py  graph_store.py  hybrid.py  reranker.py  vector_store.py  web_search.py
tests/: conftest.py  test_api.py  test_chunker.py  test_grader.py  test_ingestion.py  test_orchestrator.py  test_retriever.py
