[project]
name = "agentic-rag-engine"
version = "1.0.0"
description = "Production-level Agentic RAG with ReAct orchestration, hybrid retrieval, and self-reflection"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kona Aravind" }]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["agent", "retrieval", "ingestion", "llm", "api", "config", "observability"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]
